Changed version, added player name property to view, added edit name functionality

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,8 @@
     <string name="reset_score_message">Are you sure?</string>
     <string name="yes_title">Yep</string>
     <string name="no_title">Nope</string>
+    <string name="set_player_name_title">Set Player Name</string>
+    <string name="ok_button_label">OK</string>
 
 
 </resources>
