min SDK version was decreased, reset player names implemented, other minor changes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,6 +21,10 @@
     <string name="no_title">Nope</string>
     <string name="set_player_name_title">Set Player Name</string>
     <string name="ok_button_label">OK</string>
+    <string name="reset_player_names">Reset Players Names</string>
+    <string name="reset_player_names_title">Reset Player Names</string>
+    <string name="default_player_name">Player</string>
+    <string name="winners_header">Winner(s): </string>
 
 
 </resources>
